--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poiret+One&display=swap" rel="stylesheet">
+
     <title>Excellencia Hotel</title>
 </head>
 
 <body>
-    <header class="navbar navbar-expand-lg navbar-light border-bottom">
+    <header class="navbar navbar-expand-lg navbar-light pt-3 pb-3">
         <div class="container">
             <img src="img/Logo_PIM.png" alt="" class="logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -26,8 +28,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-2">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <li class="nav-item px-2">
+                        <a class="nav-link" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item px-2">
                         <a class="nav-link" aria-current="page" href="#">Acomodações</a>
@@ -49,6 +51,14 @@
             </div>
         </div>
     </header>
+    <div class="banner">
+        <div class="container">
+            <div class="textos-banner">
+                <div><h1>Bem Vindo</h1></div>
+                <div><h2>ao Hotel Excellência</h2></div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
