--- a/index.html
+++ b/index.html
@@ -60,6 +60,39 @@
         </div>
     </div>
 
+    <section>
+        <div class="container">
+            <div class="section-cards-all">
+                <div class="section-card">
+                    <div class="card-descricao">
+                        <h3>Quarto <b>Luxo</b></h3>
+                    </div>
+                </div>
+                <div class="section-card">
+                    <div class="card-descricao">
+                        <h3>Quarto <b>Luxo</b></h3>
+                    </div>
+                </div>
+                <div class="section-card">
+                    <div class="card-descricao">
+                        <h3>Quarto <b>Luxo</b></h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="newsletter">
+        <div class="conteudo-newsletter">
+            <div class="newsletter-txt">
+                <h3>Fique sabendo </h3>
+                <b>das melhores promoções</b>
+                <p>pelo seu email</p>
+            </div>
+            <input type="email" name="email" id="email" placeholder="Digite seu email">
+            <button>Enviar</button>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
