--- a/index.html
+++ b/index.html
@@ -89,9 +89,126 @@
                 <p>pelo seu email</p>
             </div>
             <input type="email" name="email" id="email" placeholder="Digite seu email">
-            <button>Enviar</button>
+            <button class="btn-newsletter">Enviar</button>
         </div>
     </div>
+    <main>
+        <div class="container">
+            <h1>Ofertas</h1>
+            <article>
+                <div class="card-oferta">
+                    <div class="parte-branca">
+                        <h3>Lorem Ipsum</h3>
+                        <p>is simply dummy </p>
+                        <p>is simply dummy </p>
+                        <p>is simply dummy </p>
+                        <p>is simply dummy </p>
+                    </div>
+                    <div class="parte-verde">
+                        <h3>Lorem Ipsum</h3>
+                        <span>R$ 00,00</span>
+                    </div>
+                </div>
+                <div class="card-oferta">
+                    <div class="parte-branca">
+                        <h3>Lorem Ipsum</h3>
+                        <p>is simply dummy </p>
+                        <p>is simply dummy </p>
+                        <p>is simply dummy </p>
+                        <p>is simply dummy </p>
+                    </div>
+                    <div class="parte-verde">
+                        <h3>Lorem Ipsum</h3>
+                        <span>R$ 00,00</span>
+                    </div>
+                </div>
+                <div class="card-oferta">
+                    <div class="parte-branca">
+                        <h3>Lorem Ipsum</h3>
+                        <p>is simply dummy </p>
+                        <p>is simply dummy </p>
+                        <p>is simply dummy </p>
+                        <p>is simply dummy </p>
+                    </div>
+                    <div class="parte-verde">
+                        <h3>Lorem Ipsum</h3>
+                        <span>R$ 00,00</span>
+                    </div>
+                </div>
+            </article>
+            <div class="galeria">
+                <div class="parte1-galeria">
+                    <img src="img/img-galeria1.png" alt="img1">
+                    <img src="img/img-galeria2.png" alt="img1">
+                    <img src="img/img-galeria3.png" alt="img1">
+                </div>
+                <div class="parte1-galeria">
+                    <img src="img/img-galeria4.png" alt="img1">
+                    <img src="img/img-galeria5.png" alt="img1">
+                    <img src="img/img-galeria6.png" alt="img1">
+                </div>
+            </div>
+            <div class="Lazer">
+                <h1>Lazer</h1>
+                <div class="sessao-lazer">
+                    <div class="img-lazer1">
+                        <p>Piscinas</p>
+                    </div>
+                    <div class="img-lazer2">
+                        <p>Tirolesa</p>
+                    </div>
+                </div>
+                <div class="sessao-lazer">
+                    <div class="img-lazer3">
+                        <p>Piscinas</p>
+                    </div>
+                    <div class="img-lazer4">
+                        <p>Tirolesa</p>
+                    </div>
+                </div>
+            </div>
+            <div class="sobre">
+                <div class="sobre-txt">
+                    <h3>Sobre nós</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                    <div class="txt-tel">
+                        <img src="img/tel.png" alt="tel">
+                        <p>55 11 925416325</p>
+                    </div>
+                </div>
+                <div class="sobre-maps">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58483.32819461617!2d-46.73178672089842!3d-23.632720499999987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce50e7bce0b493%3A0x6c426a052cfa9769!2sUNIP!5e0!3m2!1spt-BR!2sbr!4v1634688268044!5m2!1spt-BR!2sbr" width="450" height="300" style="border:0;" allowfullscreen="" loading="lazy" class="mapss"></iframe>
+                    <p>R. da Paz - Chácara Santo Antônio (Zona Sul), São Paulo - SP, 04713-001</p>
+                    <button>como chegar -></button>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="footer-parte1">
+                <div class="parte1-logo">
+                    <img src="img/logo-footer.png" alt="logo branco">
+                </div>
+                <div class="parte1-menu1">
+                    <h4>Telefone</h4>
+                    <p>+55 11 5823-4235 <br>
+                        +55 11 9723-5734</p>
+                </div>
+                <div class="parte1-menu2">
+                    <h4>Email</h4>
+                    <p>suporte@hotelex.com</p>
+                </div>
+                <div class="parte1-menu3">
+                    <p>Siga nossas
+                        redes sociais</p>
+                    <div class="redes">
+                        <img src="img/rede-facebook.png" alt="facebook">
+                        <img src="img/rede-instagram.png" alt="instagram">
+                    </div>
+                </div>
+            </div>
+            <div class="footer-parte2">Todos os direitos reservados</div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
